# agentic-rag-course

./: .gitignore  Makefile  agent.py  app.py  chatbot.py  pyproject.toml  readme.md
tools/: toolkit.py
tools/utils/: docsearch_tool.py  retrieve_tool.py
vdb/: vdb_init.py  vdb_insert.py
